<resources>
    <string name="app_name">ZingoGuest</string>

    <!--Custom Font Type imported,refer main->assets->font folder-->
    <string name="ColonnaMT">ColonnaMT</string>
    <string name="Leprosy">Leprosy</string>
    <string name="BomBardment">bombardment_shadow</string>
    <string name="mina">Mina_is_gone_3D</string>
    <string name="Yeysk">Yeysk</string>
    <string name="Maribel_Suit">Maribel_Suit</string>
    <string name="arial">arial</string>
    <string name="Mistral">Mistral</string>

    <!--Splash screen-->
    <string name="splash_app_name">Guest App</string>
    <string name="powered_by_zingo">Powered By Zingo</string>
    <string name="copyright_lucida">&#9400; Lucida Hospitality Pvt Ltd</string>

    <!--Guest Login-->
    <string name="login_app_name">ZingoGuest</string>
    <string name="login_app_desc">Manage your Hotel bookings</string>
    <string name="verify_text">Verify your Mobile Number</string>
    <string name="verify_msg">Enter the 6-digit code we sent to </string>

    <!--Welcome Screen-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Zingo Hotels</string>

    <!--Checkout Alert-->
    <string name="check_out_alert">Ready to Check out?</string>
    <string name="check_out_extend_text">Request a late check-out if you need more time!</string>
    <string name="check_out_later">Check out later.</string>
    <string name="check_out_come_back">Come back to this screen to check-out any time before 11:00 am</string>

    <!--Checkout Extend-->
    <string name="check_out_choose">Select your new check-out time</string>

    <!--Trip Details-->
    <string name="trip_details_text">Your Booking Details</string>

    <array name="navbar_items">
        <!--<item>Home</item>-->
        <item>Profile</item>
        <item>Bookings</item>
        <item>Pending Services</item>
        <item>Logout</item>

    </array>
    <array name="navnar_item_images">
        <item>@drawable/profle_image</item>
        <item>@drawable/booking_list_icon</item>
        <item>@drawable/pending_services_icon</item>
        <item>@drawable/logout</item>

    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pre_booking_request_btn_string">Request for Pre Check-In</string>
    <string name="room_upgrade_string">Request for Change Room</string>
    <string name="total_rooms">Total Rooms: </string>
    <string name="selected_rooms_string">Selected Room:</string>
    <string name="pre_checkin_alert_title1">Confirm pre check-in</string>
    <string name="pre_checkin_alert_title2">Are you sure you want to proceed with pre check-in?</string>
    <string name="pre_check_in_confirm_title">Your room request has been sent to the hotel successfully</string>
    <string name="pre_check_in_confirm_sub_title">Your selected room number: </string>
    <string name="pre_check_in_confirm_note_message">Please note: It is only a room request, the hotel might give you the same or allocate a different room during the time of checkin at the hotel.</string>

    <string name="change_room">Please note: It is only a room request, the hotel might give you the same or allocate a different room</string>

</resources>
