<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card-view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:scrollbars="none"
        android:id="@+id/pre_booking_scroll_view">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                card-view:cardElevation="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Demo Hotel"
                        android:id="@+id/pre_book_hotel_name"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:textColor="#000"
                        android:fontFamily="sans-serif-condensed"
                        android:padding="10dp"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:text="Bangalore"
                            android:id="@+id/pre_book_hotel_city"
                            android:fontFamily="sans-serif-condensed"
                            />

                    </RelativeLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                card-view:cardElevation="5dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:padding="5dp"
                            android:id="@+id/pre_book_total_rooms"
                            android:text="@string/total_rooms"
                            android:fontFamily="sans-serif-condensed"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:padding="5dp"
                            android:layout_toRightOf="@id/pre_book_total_rooms"
                            android:id="@+id/pre_book_total_room_number"
                            android:text=""
                            android:fontFamily="sans-serif-condensed"
                            />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:padding="5dp"
                            android:id="@+id/pre_book_selected_rooms"
                            android:text="@string/selected_rooms_string"
                            android:fontFamily="sans-serif-condensed"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:padding="5dp"
                            android:textColor="#000"
                            android:layout_toRightOf="@id/pre_book_selected_rooms"
                            android:id="@+id/pre_book_selected_room_numbers"
                            android:fontFamily="sans-serif-condensed"
                            />
                    </RelativeLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                card-view:cardElevation="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Select Rooms(s)"
                        android:textSize="20dp"
                        android:fontFamily="sans-serif-condensed"/>

                    <android.support.v7.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/change_room_recycler_view"
                        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:visibility="gone"
                        android:orientation="vertical"
                        android:id="@+id/no_room_layout"
                        android:layout_margin="10dp">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/no_room"
                            android:layout_gravity="center"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="No rooms found"
                            android:gravity="center"
                            android:layout_marginTop="10dp"
                            android:textSize="18sp"
                            android:layout_gravity="center"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/button_curved_multi"
        android:id="@+id/request_for_pre_booking_btn"
        android:text="@string/room_upgrade_string"
        android:textColor="#fff"
        android:fontFamily="sans-serif-condensed"/>
</LinearLayout>